added sketches and fixed css a little bit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iterative Design</title>
     <!-- import CSS styles -->
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Caveat:wght@400..700&family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles.css" /> 
   </head>
 
@@ -13,7 +14,7 @@
       <div class="content">
         <header class="page-heading">
           <h1 class="title">Iterative Design: Uno Health</h1>
-          <h1 class="title">Group #18: Alejandro Jackson, Joe Maffa, Joshua Lim, Zyn Ang</h1>
+          <h2>Group #18: Alejandro Jackson, Joe Maffa, Joshua Lim, Zyn Ang</h1>
           <nav class="menu">
             <ul>
               <li>
@@ -60,8 +61,8 @@
             Specifically, this informed our decision to create a separate member portal for caregivers. We also workshopped ideas for how we can best ensure proper consent from the caree yet still offer a lot of control to the caregiver.
             Finally, we thought about the best ways that we can offer safety nets in the case that caregivers or carees may not have access to the documents they need or are unsure of how to get. We then united key findings from our sketches into a low fidelity wireframe. 
           </p>
-          <!-- TODO add images -->
-          <!-- Maybe with a caption linking the doc with all our sketches in more detail -->
+          <img class="image" src="/images/sample-sketch.png">
+          <h4>An example sketch. To see all of our sketches, see this <a target="_blank" href="https://docs.google.com/presentation/d/1gZKUdM9plS8VNiT5Ehn1jSbKu2o6Q6DIqgBhzPZ876k/edit#slide=id.p">slideshow</a>.</h3>
         </div>
         <div class="proj-list" id="part-four">
           <h2 class="subheading">Part 4: Low-fidelity Wireframes & Revisions</h2> 
@@ -77,7 +78,7 @@
             Before we began our high-fidelity prototype, we created a style guide in order to ensure that our design was consistent. 
           </p> 
           <!-- TODO: Include image -->
-          <a target="_blank" href="https://www.figma.com/file/aMHx2LP2RbsXxn48Py9IKt/Uno-Health-Overview-(Working)?type=design&node-id=2457-3570&mode=design&t=Fa5eqzW7Zn1I1BVk-0">Visit our Style Guide on Figma</a>
+          <h4><a target="_blank" href="https://www.figma.com/file/aMHx2LP2RbsXxn48Py9IKt/Uno-Health-Overview-(Working)?type=design&node-id=2457-3570&mode=design&t=Fa5eqzW7Zn1I1BVk-0">Visit our Style Guide on Figma</a></h4>
         </div>
         <div class="proj-list" id="part-six">
           <h2 class="subheading">Part 6: High-fidelity Prototype</h2>  
