--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
         <div class="proj-list" id="part-seven">
           <h2 class="subheading">Part 7: Startup Presentation & Revisions</h2> 
           <!-- TODO: Include recap of our meeting and key insights -->
+          <p class="inner-text">
+            During our meeting with Elise, we received feedback and briefly went
+            over our design process, high-fidelity wireframes, and the key decisions
+            we made. Elise provided feedback on the design—specifically that it 
+            would be best if we provided with users with a 'best path'. Ways to
+            nudge the user towards a decision, particularly, one we are interested
+            in them making. This could be accomplished by making some buttons/text 
+            larger or more prominent than others.
+          </p>
+          
 
           <!-- TODO: include photos / discussion of how we addressed them for extra credit -->
            <p class="inner-text">
