--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
           </ol>
 
           <p class="inner-text">Given the feedback we received, we updated our low-fidelity wireframe to include all the suggested changes. Here is the link to our <a href="https://www.figma.com/file/aMHx2LP2RbsXxn48Py9IKt/Uno-Health-Overview-(Working)?type=design&node-id=2095-254&mode=design">revised low-fidelity wireframes</a></p>
+
+          <p class="inner-text">We included all suggestions in our updated low-fidelity wireframe. A key thing we focused on in this revision was increasing accessibility, since the demographic of Uno health's users skews towards the elderly. Apart from ensuring that we did not go below a font size of 12px on the screens, we also created a scrollbar for users to select text size when using the app. Most of the suggestions were straightforward, and required a minor change. However, we needed to brainstorm how to best incorporate Elise's feedback about creating "a way for the experience to work in the event that the Caree is not tech savvy at all and might not be willing to create an account or may require a much lighter weight way of interacting with this process". In the end, we decided to include a new flow which did not require the caree to create an account at all. The caregiver would be able to help the caree through the Uno application process without having to link their account to their caree's. All we needed was consent from the caree that the caregiver would apply for Uno on their behalf, and the caregiver would have full control over the caree's Uno enrollment and application process.
+             </p>
           <!-- TODO: Include link to revised wireframes -->
           
           <!-- TODO: information to include in handout but: design decisions->impact, feedback received, changes made in updated version -->
