--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             Specifically, this informed our decision to create a separate member portal for caregivers. We also workshopped ideas for how we can best ensure proper consent from the caree yet still offer a lot of control to the caregiver.
             Finally, we thought about the best ways that we can offer safety nets in the case that caregivers or carees may not have access to the documents they need or are unsure of how to get. We then united key findings from our sketches into a low fidelity wireframe. 
           </p>
-          <img class="image" src="/images/sample-sketch.jpg">
+          <img class="image" src="images\sample-sketch.jpg">
           <p class="inner-text"> An example sketch. To see all of our sketches, see our <a target="_blank" href="https://www.figma.com/file/aMHx2LP2RbsXxn48Py9IKt/Uno-Health-Overview-(Working)?type=design&node-id=2558-2230&mode=design&t=hM2S1ra7PvJ4G9Jq-0">Figma</a>.</p>
         </div>
         <div class="proj-list" id="part-four">
@@ -141,10 +141,10 @@
           <p class="inner-text">
             Before we began our high-fidelity prototype, we created a style guide in order to ensure that our design was consistent. 
           </p> 
-          <img class="image" src="/images/style-guide.jpg">
+          <img class="image" src="images\style-guide.jpg">
 
           <h4>A sample of our style guide. See the full style guide on <a target="_blank" href="https://www.figma.com/file/aMHx2LP2RbsXxn48Py9IKt/Uno-Health-Overview-(Working)?type=design&node-id=2457-3570&mode=design&t=fOVtjLnyiQIGvUcA-0">Figma</a>.</h4>
-          
+
         </div>
         <div class="proj-list" id="part-six">
           <h2 class="subheading">Part 6: High-fidelity Prototype</h2> 
