added text and caption ish

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             Furthermore, we created various high-fidelity versions of the member portals. These included various states
             the user could find the portal in, such as the caregiver portal with a caree already connected, 
             the caregiver portal with no caree connected, and the caree portal with a caregiver connected, etc. 
-            We linked these pages together to create a clickable prototype that we could share with Elise.
+            We linked these pages together to create a clickable prototype that we could share with Elise. Below are three walkthroughs of the
+            high-fidelity prototype including the eligibility, signup, and upload flows.
             </p>
             <img src="assets\VideoofPrototype-MadewithClipchamp-ezgif.com-video-to-gif-converter.gif" alt="eligibility walkthrough">
             <img src="assets\VideoofPrototype-MadewithClipchamp-ezgif.com-video-to-gif-converter (1).gif" alt="member signup walkthrough">
@@ -208,9 +209,10 @@
 
             <img class="part_7 image" src="images\revisions.jpg" alt="high fi revision: happy paths">
 
-            <p class="inner-text">In response to her second piece of feedback, we included a way for the user to communicate with either their caree/caregiver over text message, such that their caree/caregiver would not necessarily need to have an Uno account to help them out. This text message will contain a link to a webpage where the caree/caregiver would be able to upload the documents without needing an Uno account. The message will also contain postal/fax information if the caree/caregiver of the user would prefer to use alternative methods to send Uno the information instead.</p>
+            <p class="inner-text">In response to her second piece of feedback, we included a way for the user to communicate with either their caree/caregiver over text message, such that their caree/caregiver would not necessarily need to have an Uno account to help them out. This text message will contain a link to a webpage where the caree/caregiver would be able to upload the documents without needing an Uno account. The message will also contain postal/fax information if the caree/caregiver of the user would prefer to use alternative methods to send Uno the information instead. See the revisions and an example text below.</p>
 
             <img class="part_7 image" src="images\revisions_2.jpg" alt="high fi revision: alternative notification channels">
+            <img class="part_7 image" src="images\sample-text.png" alt="high fi revision: sample text message">
           </p>
           
 
